--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/forrest-wilson/gstjs/issues"
   },
-  "homepage": "https://github.com/forrest-wilson/gstjs#readme"
+  "homepage": "https://github.com/forrest-wilson/gstjs#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-uglify": "^3.0.0"
+  }
 }
