--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "gulp": "3.9.1",
     "gulp-clean": "0.3.2",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "1.2.2",
     "gulp-uglify": "3.0.0",
     "run-sequence": "2.2.0"
   }
